test_files/s_cproc/macro/test_003/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro/test_003/i.input:1:8: error: macro names must be identifiers
 #define(me)
        ^
